--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Word Emotions</title>
+  <title>Word of Emotions</title>
   <style>
     .happy {
       color: yellow;
